Revert "KMA-404 Can't enable KMM plugin in 2022.1 if plugins were migrated from 2021.3.x"
This reverts commit b25aefe22640bb20dafa2d3b7281656fde9a98cc.

GitOrigin-RevId: ccefc12c91081a95edcde1cb23adb505642b1eb9