@@ -20,7 +20,6 @@ import com.intellij.openapi.ui.Messages;
 import com.intellij.openapi.util.BuildNumber;
 import com.intellij.openapi.util.NlsContexts;
 import com.intellij.openapi.util.NlsSafe;
-import com.intellij.util.Url;
 import com.intellij.util.Urls;
 import com.intellij.util.text.VersionComparatorUtil;
 import com.intellij.xml.util.XmlStringUtil;
@@ -377,13 +376,9 @@ public final class PluginDownloader {
   public static @NotNull PluginDownloader createDownloader(@NotNull IdeaPluginDescriptor descriptor,
                                                            @Nullable String host,
                                                            @Nullable BuildNumber buildNumber) throws IOException {
-    String url = null;
-    if (descriptor instanceof PluginNode) {
-      url = getDownloadUrl((PluginNode)descriptor, host);
-    }
-    if (url == null) {
-      url = getUrl(descriptor.getPluginId(), buildNumber).toExternalForm();
-    }
+    String url = descriptor instanceof PluginNode && host != null ?
+                 getDownloadUrl((PluginNode)descriptor, host) :
+                 getUrl(descriptor.getPluginId(), buildNumber);
     return new PluginDownloader(descriptor,
                                 url,
                                 buildNumber,
@@ -415,22 +410,21 @@ public final class PluginDownloader {
     return node;
   }
 
-  private static @Nullable String getDownloadUrl(PluginNode pluginNode, @Nullable String host) throws IOException {
+  private static String getDownloadUrl(PluginNode pluginNode, String host) throws IOException {
     String url = pluginNode.getDownloadUrl();
     try {
-      return new URI(url).isAbsolute() ? url
-                                       : host == null ? null
-                                                      : new URL(new URL(host), url).toExternalForm();
+      return new URI(url).isAbsolute() ? url : new URL(new URL(host), url).toExternalForm();
     }
     catch (URISyntaxException e) {
       throw new IOException(e);
     }
   }
 
-  public static Url getUrl(PluginId pluginId, @Nullable BuildNumber buildNumber) {
+  private static String getUrl(PluginId pluginId, @Nullable BuildNumber buildNumber) {
     return Urls.newFromEncoded(ApplicationInfoImpl.getShadowInstance().getPluginsDownloadUrl())
       .addParameters(Map.of("id", pluginId.getIdString(),
                             "build", ApplicationInfoImpl.orFromPluginsCompatibleBuild(buildNumber),
-                            "uuid", getMarketplaceDownloadsUUID()));
+                            "uuid", getMarketplaceDownloadsUUID()))
+      .toExternalForm();
   }
 }
